# bare-terminal-template

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
.github/workflows/: prebuild.yml
src/: builtins.json  main.bundle.h  main.bundle.h.d  main.c
